# squirrel

./: CMakeLists.txt  README.md
doc/: cache子系统架构图.vsd  二次系统架构图.vsd  持久化子系统架构图.vsd  数据服务器的设计.docx  数据访问代理线程流程图.vsd  数据访问代理详细流程图.vsd  服务器管理器系统设计图.vsd  系统架构图.vsd  网关设计图.vsd
generate/configure/: core.xml  squirrel_example.xml
generate/storage/create_procedure/: PROCEDURE_KEYVEALUE_DELETE.sql  PROCEDURE_KEYVEALUE_GET.sql  PROCEDURE_KEYVEALUE_SET.sql  PROCEDURE_LIST_CLEAR.sql  PROCEDURE_LIST_DELETE.sql  PROCEDURE_LIST_POP.sql  PROCEDURE_LIST_PUSH.sql  PROCEDURE_LIST_REMOVE.sql  PROCEDURE_MAP_CLEAR.sql  PROCEDURE_MAP_DELETE.sql  PROCEDURE_MAP_INSERT.sql  PROCEDURE_MAP_QUERY_RANKING.sql  PROCEDURE_MAP_QUERY_RANKING_RANGE.sql  PROCEDURE_MAP_REMOVE.sql  PROCEDURE_NUMBER_DECREASE.sql  PROCEDURE_NUMBER_DELETE.sql  PROCEDURE_NUMBER_INCREASE.sql  PROCEDURE_NUMBER_RESET.sql
generate/storage/create_table/: squirrel.sql
src/: search
src/common/: async_request_object_constants.cpp  async_request_object_constants.h  async_request_object_types.cpp  async_request_object_types.h  keyvalue_message_constants.cpp  keyvalue_message_constants.h  keyvalue_message_types.cpp  keyvalue_message_types.h  list_message_constants.cpp  list_message_constants.h  list_message_types.cpp  list_message_types.h  map_message_constants.cpp  map_message_constants.h  map_message_types.cpp  map_message_types.h  message_constants.cpp  message_constants.h  message_data_proxy_constants.cpp  message_data_proxy_constants.h  message_data_proxy_types.cpp  message_data_proxy_types.h  message_schedule_constants.cpp  message_schedule_constants.h  message_schedule_types.cpp  message_schedule_types.h  message_types.cpp  message_types.h  number_message_constants.cpp  number_message_constants.h  number_message_types.cpp  number_message_types.h  protocol.h  request_type_constants.cpp  request_type_constants.h  request_type_types.cpp  request_type_types.h  server_type_constants.cpp  server_type_constants.h  server_type_types.cpp  (+1 more)
src/common/meta/: CMakeLists.txt  async_request_object.thrift  keyvalue_message.thrift  list_message.thrift  map_message.thrift  message.thrift  message_data_proxy.thrift  message_schedule.thrift  (+3 more)
src/core/: CMakeLists.txt  acceptor.cc  acceptor.h  base_loop.h  callbacks.h  channel.cc  channel.h  configure.cc  configure.h  connector.cc  connector.h  epoller.cc  epoller.h  event_control.cc  event_control.h  event_handler.h  event_loop.cc  event_loop.h  event_loop_thread_group.cc  event_loop_thread_group.h  event_pipe.h  inet_address.cc  inet_address.h  loop_thread.cc  loop_thread.h  signal_set.cc  signal_set.h  signaller.h  tcp_client.cc  tcp_client.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  tcp_server.h  tcp_socket.cc  tcp_socket.h  timer.h  timer_handler.h  timing_base.cc  timing_base.h  (+5 more)
src/core/base/: auto_mutex.h  bound_queue.cc  bound_queue.h  bound_queue_common.h  byte_buffer_dynamic.cc  byte_buffer_dynamic.h  byte_buffer_static.h  common.cc  common.h  condition_variable.h  logging.cc  logging.h  mutex.h  noncopyable.h  scoped_mutex.h  thread.cc  thread.h  time_tick.h  types.h  variable_parameter.h
src/data_proxy_server/redis_proxy/test/: CMakeLists.txt  redis_keyvalue_unit_test.cc  redis_list_unit_test.cc  redis_map_unit_test.cc  redis_number_unit_test.cc  redis_reconnector_unit_test.cc  redis_set_unit_test.cc
src/data_proxy_server/server/: CMakeLists.txt  async_request.cc  async_request.h  async_request_loop.cc  async_request_loop.h  async_request_pool.cc  async_request_pool.h  data_proxy_server.cc  data_proxy_server.h  default_request_handler.cc  default_request_handler.h  keyvalue_request_handler.cc  keyvalue_request_handler.h  list_request_handler.cc  list_request_handler.h  main.cc  map_request_handler.cc  map_request_handler.h  number_request_handler.cc  number_request_handler.h  request_service.cc  request_service.h  request_terminal.cc  request_terminal.h  request_terminal_set.cc  request_terminal_set.h  server_configure.cc  server_configure.h
src/data_proxy_server/storage_proxy/test/: CMakeLists.txt  storage_list_unit_test.cc  storage_map_unit_test.cc  storage_number_unit_test.cc  storage_reconnector_unit_test.cc  storage_set_unit_test.cc
src/gateway_server/: CMakeLists.txt  data_request_handler.cc  data_request_handler.h  gateway_server.cc  gateway_server.h  http_context.h  http_request.h  http_response.cc  http_response.h  http_service_handler.cc  http_service_handler.h  main.cc  map_request_handler.cc  map_request_handler.h  message_thread_pool.cc  message_thread_pool.h  server_configure.cc  server_configure.h
src/global/: async_logging.cc  async_logging.h  async_logging_loop.cc  async_logging_loop.h  async_logging_singleton.cc  async_logging_singleton.h  blocking_queue.h  elf_hash.h  logging_level.h  reconnect_loop.h  reconnector.h  sequence_allocator.h  singleton_factory.h  thrift_packet.h  time_consuming.h
src/global/tests/: CMakeLists.txt  async_logging.cc
src/protocol/: message_constants.cpp  message_constants.h  message_types.cpp  message_types.h  protocol_keyvalue_message_constants.cpp  protocol_keyvalue_message_constants.h  protocol_keyvalue_message_types.cpp  protocol_keyvalue_message_types.h  protocol_list_message_constants.cpp  protocol_list_message_constants.h  protocol_list_message_types.cpp  protocol_list_message_types.h  protocol_map_message_constants.cpp  protocol_map_message_constants.h  protocol_map_message_types.cpp  protocol_map_message_types.h  protocol_number_message_constants.cpp  protocol_number_message_constants.h  protocol_number_message_types.cpp  protocol_number_message_types.h
src/schedule_server/server/: CMakeLists.txt  main.cc  schedule_circle.cc  schedule_circle.h  schedule_client.cc  schedule_client.h  schedule_server.cc  schedule_server.h  schedule_terminal.cc  schedule_terminal.h  schedule_terminal_set.cc  schedule_terminal_set.h  server_configure.cc  server_configure.h
src/test/: CMakeLists.txt  http_client.cc  http_client.h  http_response.h  keyvalue_test.cc  list_test.cc  map_test.cc  number_test.cc  signal_test.cc
(+53 files in other folders)
